<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.SongActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:contentDescription="@string/songart"
        android:padding="@dimen/padding"
        android:src="@drawable/songart" />

    <TextView
        android:id="@+id/playing_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playing_now"
        android:textAlignment="center"
        android:textSize="@dimen/txt_s" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <ImageView
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/shapes_h"
            android:layout_weight="1"
            android:contentDescription="@string/prevsong" />

        <ImageView
            android:id="@+id/playAndpause"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/shapes_h"
            android:layout_weight="1"
            android:contentDescription="@string/stop_and_play" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/shapes_h"
            android:layout_weight="1"
            android:contentDescription="@string/nextsong" />
    </LinearLayout>
</LinearLayout>
