<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:ignore="UseCompoundDrawables">
    <ImageView
        android:layout_width="@dimen/artist_pic"
        android:layout_height="@dimen/artist_pic"
        android:id="@+id/artistImg"
        android:contentDescription="@string/artist_picture"
        android:layout_margin="10dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/songName"
        android:paddingTop="25dp"
        android:text="@string/song" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/artistName"
        android:layout_below="@id/songName"
        android:text="@string/artist_name" />
    </RelativeLayout>
</LinearLayout>