<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_view_h"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        tools:context="com.example.android.musicapp.MainActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/prev1"
            android:layout_width="@dimen/small_shapes_h"
            android:layout_height="@dimen/small_shapes_h"
            android:layout_weight="1"
            android:src="@drawable/prev"
            android:contentDescription="@string/prevsong" />

        <ImageView
            android:id="@+id/playAndpause1"
            android:layout_width="@dimen/small_shapes_h"
            android:layout_height="@dimen/small_shapes_h"
            android:layout_weight="1"
            android:src="@drawable/play"
            android:contentDescription="@string/stop_and_play" />

        <ImageView
            android:id="@+id/next1"
            android:layout_width="@dimen/small_shapes_h"
            android:layout_height="@dimen/small_shapes_h"
            android:layout_weight="1"
            android:src="@drawable/next"
            android:contentDescription="@string/nextsong" />
    </LinearLayout>
</LinearLayout>